--- a/templates/Requestedleave.html
+++ b/templates/Requestedleave.html
@@ -10,7 +10,7 @@
         <div class="card-body">
           <div class="row" style="margin-top: -16px">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <h4>Requested Leave :</h4>
+              <h4>Requested Leave :</h4><br>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
               <form>
@@ -24,7 +24,7 @@
                     <span class="input-group-text bg-danger"
                       ><i
                         class="fas fa-search text-light"
-                        style="font-size: 16px"
+                        style="font-size: 18px"
                       ></i
                     ></span>
                   </div>
@@ -32,6 +32,7 @@
               </form>
             </div>
             </div>
+            <div class="table-responsive">
                     <table class="table  table-bordered ">
                         <thead  style="background-color: black;">
                             <tr>
@@ -59,16 +60,16 @@
                                 </td> -->
                                 <td>
                                     <!-- <img src="assets/images/faces/face1.jpg" alt="image" /> -->
-                                    <span class="ps-2"></span>
+                                    <span class="ps-2">01-02-2022</span>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td>01-02-2022</td>
+                                <td>05-02-2022</td>
                                 <!-- <td> Dashboard </td> -->
                                 <!-- <td> Credit card </td>
                                 <td> 04 Dec 2019 </td> -->
                                 <td>
                                     <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
-                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="This will affect your salary.Are you sure to confirm?">Full Day</button>
+                                    
                                 </td>
                             </tr>
                             <tr>
@@ -81,16 +82,15 @@
                                 </td> -->
                                 <td>
                                     <!-- <img src="assets/images/faces/face2.jpg" alt="image" /> -->
-                                    <span class="ps-2"></span>
+                                    <span class="ps-2">02-02-2022</span>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td>04-02-2022</td>
+                                <td>07-02-2022</td>
                                 <!-- <td> Website </td> -->
                                 <!-- <td> Cash on delivered </td>
                                 <td> 04 Dec 2019 </td> -->
                                 <td>
-                                    <a href="#"><div class="badge badge-outline-success">Half Day</div></a><br>
-                                    <a href="#"><div class="badge badge-outline-warning">Full Day</div></a>
+                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="This will affect your salary.Are you sure to confirm?">Full Day</button>
                                 </td>
                             </tr>
                             <tr>
@@ -103,16 +103,16 @@
                                 </td> -->
                                 <td>
                                     <!-- <img src="assets/images/faces/face5.jpg" alt="image" /> -->
-                                    <span class="ps-2"></span>
+                                    <span class="ps-2">03-02-2022</span>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td>03-02-2022</td>
+                                <td>18-02-2022</td>
                                 <!-- <td> App design </td> -->
                                 <!-- <td> Credit card </td>
                                 <td> 04 Dec 2019 </td> -->
                                 <td>
-                                    <a href="#"><div class="badge badge-outline-success">Half Day</div></a><br>
-                                    <a href="#"><div class="badge badge-outline-warning">Full Day</div></a>
+                                    <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
+                                  
                             </tr>
                             <tr>
                                 <!-- <td>
@@ -124,16 +124,15 @@
                                 </td> -->
                                 <td>
                                     <!-- <img src="assets/images/faces/face3.jpg" alt="image" /> -->
-                                    <span class="ps-2"></span>
+                                    <span class="ps-2">04-02-2022</span>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td>04-02-2022</td>
+                                <td>22-02-2022</td>
                                 <!-- <td> Development </td> -->
                                 <!-- <td> Online Payment </td>
                                 <td> 04 Dec 2019 </td> -->
                                 <td>
-                                    <a href="#"><div class="badge badge-outline-success">Half Day</div></a><br>
-                                    <a href="#"><div class="badge badge-outline-warning">Full Day</div></a>
+                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="This will affect your salary.Are you sure to confirm?">Full Day</button>
                                 </td>
                             </tr>
                             <tr>
@@ -146,15 +145,15 @@
                                 </td> -->
                                 <td>
                                     <!-- <img src="assets/images/faces/face4.jpg" alt="image" /> -->
-                                    <span class="ps-2"></span>
+                                    <span class="ps-2">05-02-2022</span>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td>05-02-2022</td>
+                                <td>20-02-2022</td>
                                 <!-- <td> Website </td> -->
                                 
                                 <td>
-                                    <a href="#"><div class="badge badge-outline-success">Half Day</div></a><br>
-                                    <a href="#"><div class="badge badge-outline-warning">Full Day</div></a>
+                                    <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
+                             
                                 </td>
                             </tr>
                         </tbody>
