--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -1,89 +1,117 @@
 {% extends 'index.html' %} {% block content %} {% load static %}
 
+<div class="row" style="padding-top:20px;">
+    <div class="col-sm-6 grid-margin">
+        <div class="card" style="height: 280px">
+            <a href="current" style="text-decoration: none;">
+                <div class="card-body">
+                    {% comment %} <h5>Revenue</h5> {% endcomment %}
+                    <div class="row" style="padding-top:50px;">
+                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                            <div class="d-flex d-sm-block d-md-flex align-items-center">
+                                <a href="/app/applyleavesub" style="text-decoration: none">
+                                    <h3 class="mb-0" style="color:white;">Apply Leave</h3>
+                                </a>
+                                {% comment %} <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> {%
+                                endcomment %}
+                            </div>
+                            {% comment %} <h6 class="text-muted font-weight-normal">11.38% Since last month</h6> {%
+                            endcomment %}
+                        </div>
+                        <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+                            <i class="icon-lg mdi mdi-account-off text-danger ms-auto"></i>
 
-    <div class="row mt-5">
-        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-9">
-                            <div class="d-flex align-items-center align-self-start">
-                                <a href="/app/applyleavesub" style="color: #FFFFFF; text-decoration: none;"><h3 class="mb-0">Apply Leave</h3></a>
-                                <!-- <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> -->
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="icon icon-box-danger">
-                                <span class="mdi mdi-account-off"></span>
-                            </div>
                         </div>
                     </div>
-                    <!-- <h6 class="text-muted">Trainers</h6> -->
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-9">
-                            <div class="d-flex align-items-center align-self-start">
-                              <a href="/app/Requestedleave" style="color: #FFFFFF; text-decoration: none;"><h3 class="mb-0">Requested Leave</h3></a>
-                                <!-- <p class="text-success ms-2 mb-0 font-weight-medium">+11%</p> -->
+    </div>
+
+    <div class="col-sm-6 grid-margin">
+        <div class="card" style="height: 280px">
+            <div class="card-body">
+                <a href="prteam" style="text-decoration:none;">
+                    {% comment %} <h5>Revenue</h5> {% endcomment %}
+                    <div class="row" style="padding-top:50px;">
+                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                            <div class="d-flex d-sm-block d-md-flex align-items-center">
+                                <a href="/app/Requestedleave" style="text-decoration: none">
+                                    <h3 class="mb-0" style="color:white;">Requested Leave</h3>
+                                </a>
+                                {% comment %} <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> {%
+                                endcomment %}
                             </div>
+                            {% comment %} <h6 class="text-muted font-weight-normal">11.38% Since last month</h6> {%
+                            endcomment %}
                         </div>
-                        <div class="col-3">
-                            <div class="icon icon-box-success">
-                                <span class="mdi mdi-account-multiple-plus icon-item"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <h6 class="text-muted font-weight-normal">Revenue current</h6> -->
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-9">
-                            <div class="d-flex align-items-center align-self-start">
-                                <a href="/#" style="color: #FFFFFF; text-decoration: none;"><h3 class="mb-0">Trainer Leave List </h3></a>
-                                <!-- <p class="text-danger ms-2 mb-0 font-weight-medium">-2.4%</p> -->
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="icon icon-box-primary">
-                                <span class="mdi mdi-clipboard-text icon-item"></span>
-                            </div>
+                        <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+                            <i class="icon-lg mdi mdi-account-remove text-warning ms-auto"></i>
                         </div>
                     </div>
-                    <!-- <h6 class="text-muted font-weight-normal">Daily Income</h6> -->
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-9">
-                            <div class="d-flex align-items-center align-self-start">
-                                <a href="/#" style="color: #FFFFFF; text-decoration: none;"><h3 class="mb-0">Trainees Leave List</h3></a>
-                                <!-- <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> -->
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="icon icon-box-primary">
-                                <span class="mdi mdi-clipboard-text icon-item"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <h6 class="text-muted font-weight-normal">Expense current</h6> -->
-                </div>
+                </a>
             </div>
         </div>
     </div>
 </div>
+<!-- @ -->
+
+<div class="row" style="padding-top:20px;">
+    <div class="col-sm-6 grid-margin">
+        <div class="card" style="height: 280px">
+            <a href="current" style="text-decoration: none;">
+                <div class="card-body">
+                    {% comment %} <h5>Revenue</h5> {% endcomment %}
+                    <div class="row" style="padding-top:50px;">
+                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                            <div class="d-flex d-sm-block d-md-flex align-items-center">
+                                <a href="/app/trainers_leave" style="text-decoration: none">
+                                    <h3 class="mb-0" style="color:white;">Trainers Leave List </h3>
+                                </a>
+                                {% comment %} <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> {%
+                                endcomment %}
+                            </div>
+                            {% comment %} <h6 class="text-muted font-weight-normal">11.38% Since last month</h6> {%
+                            endcomment %}
+                        </div>
+                        <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+                            <i class="icon-lg mdi mdi-clipboard-text text-primary ms-auto"></i>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-sm-6 grid-margin">
+        <div class="card" style="height: 280px">
+            <div class="card-body">
+                <a href="prteam" style="text-decoration:none;">
+                    {% comment %} <h5>Revenue</h5> {% endcomment %}
+                    <div class="row" style="padding-top:50px;">
+                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                            <div class="d-flex d-sm-block d-md-flex align-items-center">
+                                <a href="/app/Trainees_leave" style="text-decoration: none">
+                                    <h3 class="mb-0" style="color:white;">Trainees Leave List </h3>
+                                </a>
+                                {% comment %} <p class="text-success ms-2 mb-0 font-weight-medium">+3.5%</p> {%
+                                endcomment %}
+                            </div>
+                            {% comment %} <h6 class="text-muted font-weight-normal">11.38% Since last month</h6> {%
+                            endcomment %}
+                        </div>
+                        <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+                            <i class="icon-lg mdi mdi-clipboard-text text-primary ms-auto"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- end -->
 
 
 {% endblock %}
