--- a/templates/Attendance.html
+++ b/templates/Attendance.html
@@ -1,48 +1,51 @@
 {%extends 'index.html'%} {% load static %} {% block content %}
 
-<div class="content-wrapper">
-  <div class="row">
-    <div class="col-md-6 grid-margin stretch-card">
+
+  <div class="row" style="padding-top:20px;">
+    <div class="col-sm-6 grid-margin">
       <div class="card" style="height: 280px">
-        <a href="/app/Trainers_Calendar" style="text-decoration: none">
-          <div class="card-body">
-            <h1
-              class="card-title text-center "
-              style="margin-top: 50px"
-            >
-              &nbsp;&nbsp;&nbsp;Trainers&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <i
-                class="mdi mdi-pencil-box-outline text-warning"
-                style="font-size: 70px"
-              ></i>
-            </h1>
+      <a href="current" style="text-decoration: none;">
+        <div class="card-body">
+        
+          <div class="row" style="padding-top:50px;">
+            <div class="col-8 col-sm-12 col-xl-8 my-auto">
+              <div class="d-flex d-sm-block d-md-flex align-items-center">
+                <a href="/app/Trainees_Calendar" style="text-decoration: none">
+                <h2 class="mb-0" style= "color:white;">Trainees</h2></a>
+              
+              </div>
+        
+            </div>
+            <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+              <i class="icon-lg mdi mdi-account-key text-warning ms-auto"></i>
+            </div>
           </div>
-        </a>
+        </div>
+      </a>
       </div>
     </div>
 
-    <div class="col-md-6 grid-margin stretch-card">
+    <div class="col-sm-6 grid-margin">
       <div class="card" style="height: 280px">
-        <a
-          href="/app/Trainees_Calendar"
-          style="text-decoration:none;style="
-          text-decoration:none;
-        >
-          <div class="card-body">
-            <h1
-              class="card-title text-center"
-              style="margin-top: 50px"
-            >
-              &nbsp;&nbsp;&nbsp;Trainees&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <i
-                class="mdi mdi-account-group text-warning"
-                style="font-size: 70px"
-              ></i>
-            </h1>
+        <div class="card-body">
+        <a href="prteam" style="text-decoration:none;">
+      
+          <div class="row" style="padding-top:50px;">
+            <div class="col-8 col-sm-12 col-xl-8 my-auto">
+              <div class="d-flex d-sm-block d-md-flex align-items-center">
+                <a href="/app/Trainers_Calendar" style="text-decoration: none">
+                <h2 class="mb-0" style= "color:white;">Trainers</h2></a>
+               
+              </div>
+              
+            </div>
+            <div class="col-4 col-sm-12 col-xl-2 text-center text-xl-right">
+              <i class="icon-lg mdi mdi-account-supervisor text-primary ms-auto"></i>
+            </div>
           </div>
-        </a>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  {%endblock%}
 </div>
+  {%endblock%}
