--- a/templates/Requestedleave.html
+++ b/templates/Requestedleave.html
@@ -3,46 +3,32 @@
 {% block content %}
 
 
-    
+
 <div class="row mt-3 mb-5">
     <div class="col-12 grid-margin">
-    <div class="card">
-        <div class="card-body">
-          <div class="row" style="margin-top: -16px">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <h4>Requested Leave :</h4><br>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <form>
-                <div class="input-group input-group-sm mb-3">
-                  <input
-                    type="text"
-                    class="form-control text-white"
-                    placeholder="Search"
-                  />
-                  <div class="input-group-append">
-                    <span class="input-group-text bg-danger"
-                      ><i
-                        class="fas fa-search text-light"
-                        style="font-size: 18px"
-                      ></i
-                    ></span>
-                  </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="row" style="margin-top: -16px">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                        <h4>Requested Leave </h4><br>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                        <form>
+                            <div class="input-group input-group-sm mb-3">
+                                <input type="text" class="form-control text-white" placeholder="Search" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text bg-primary"><i class="fas fa-search text-light"
+                                            style="font-size: 18px"></i></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </form>
-            </div>
-            </div>
-            <div class="table-responsive">
-                    <table class="table  table-bordered ">
-                        <thead  style="background-color: black;">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
                             <tr>
-                                <!-- <th>
-                                     <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input"> 
-                    </label>
-                                    </div> 
-                                </th> -->
+
                                 <th> Date </th>
                                 <th> Start Date </th>
                                 <th> End Date </th>
@@ -51,109 +37,73 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <!-- <td>
-                                    <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input">
-                    </label>
-                                    </div>
-                                </td> -->
+
                                 <td>
-                                    <!-- <img src="assets/images/faces/face1.jpg" alt="image" /> -->
+
                                     <span class="ps-2">01-02-2022</span>
                                 </td>
                                 <td>01-02-2022</td>
                                 <td>05-02-2022</td>
-                                <!-- <td> Dashboard </td> -->
-                                <!-- <td> Credit card </td>
-                                <td> 04 Dec 2019 </td> -->
+
                                 <td>
                                     <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
-                                    
+
                                 </td>
                             </tr>
                             <tr>
-                                <!-- <td>
-                                    <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input"> 
-                    </label>
-                                    </div>
-                                </td> -->
+
                                 <td>
-                                    <!-- <img src="assets/images/faces/face2.jpg" alt="image" /> -->
+
                                     <span class="ps-2">02-02-2022</span>
                                 </td>
                                 <td>04-02-2022</td>
                                 <td>07-02-2022</td>
-                                <!-- <td> Website </td> -->
-                                <!-- <td> Cash on delivered </td>
-                                <td> 04 Dec 2019 </td> -->
+
                                 <td>
-                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="This will affect your salary.Are you sure to confirm?">Full Day</button>
+                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="">Full
+                                        Day</button>
                                 </td>
                             </tr>
                             <tr>
-                                <!-- <td>
-                                    <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input"> 
-                    </label>
-                                    </div>
-                                </td> -->
+
                                 <td>
-                                    <!-- <img src="assets/images/faces/face5.jpg" alt="image" /> -->
+
                                     <span class="ps-2">03-02-2022</span>
                                 </td>
                                 <td>03-02-2022</td>
                                 <td>18-02-2022</td>
-                                <!-- <td> App design </td> -->
-                                <!-- <td> Credit card </td>
-                                <td> 04 Dec 2019 </td> -->
+
                                 <td>
                                     <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
-                                  
+
                             </tr>
                             <tr>
-                                <!-- <td>
-                                    <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input"> 
-                    </label>
-                                    </div>
-                                </td> -->
+
                                 <td>
-                                    <!-- <img src="assets/images/faces/face3.jpg" alt="image" /> -->
+
                                     <span class="ps-2">04-02-2022</span>
                                 </td>
                                 <td>04-02-2022</td>
                                 <td>22-02-2022</td>
-                                <!-- <td> Development </td> -->
-                                <!-- <td> Online Payment </td>
-                                <td> 04 Dec 2019 </td> -->
+
                                 <td>
-                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="This will affect your salary.Are you sure to confirm?">Full Day</button>
+                                    <button type="button" class="btn btn-social-icon-text bg-danger" onclick="">Full
+                                        Day</button>
                                 </td>
                             </tr>
                             <tr>
-                                <!-- <td>
-                                    <div class="form-check form-check-muted m-0">
-                                        <label class="form-check-label">
-                       <input type="checkbox" class="form-check-input"> 
-                    </label>
-                                    </div>
-                                </td> -->
+
                                 <td>
-                                    <!-- <img src="assets/images/faces/face4.jpg" alt="image" /> -->
+
                                     <span class="ps-2">05-02-2022</span>
                                 </td>
                                 <td>05-02-2022</td>
                                 <td>20-02-2022</td>
-                                <!-- <td> Website </td> -->
-                                
+
+
                                 <td>
                                     <button type="button" class="btn btn-social-icon-text bg-success">Half Day</button>
-                             
+
                                 </td>
                             </tr>
                         </tbody>
