--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -85,7 +85,7 @@
                     <div class="row" style="padding-top:50px;">
                         <div class="col-8 col-sm-12 col-xl-8 my-auto">
                             <div class="d-flex d-sm-block d-md-flex align-items-center">
-                                <a href="/app/Trainees_leave" style="text-decoration: none">
+                                <a href="/app/trainees_leave" style="text-decoration: none">
                                     <h3 class="mb-0" style="color:white;">Trainees Leave List </h3>
                                 </a>
                                 
