--- a/templates/applyleavesub.html
+++ b/templates/applyleavesub.html
@@ -66,7 +66,7 @@
     <!-- button calling script (line 95-96)-->
     <script>
       function redirect() {
-        window.location.href = "/app/applyleave"
+        window.location.href = "/app/Applyleave"
       }
     </script>
 
